--- a/index.html
+++ b/index.html
@@ -2,15 +2,22 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title></title>
+		<title>v0.cookies.js</title>
     <link href="styles.css" rel="stylesheet">
-    <script src="jquery.js"></script>
-		<script src="js-cookie.js"></script>
+		<script
+  src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+  integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E="
+  crossorigin="anonymous"></script>
+		<script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
+		<script src="v0.cookies.js"></script>
 		<script src="scripts.js"></script>
 	</head>
 	<body>
 
-		<h1></h1>
+		<div class="notification v0-cookies-returning-hide">
+			<span class="hide-notification">&times;</span>
+			<span>Show this message when you’re using cookies. You won’t see it if you’ve been here before.</span>
+		</div>
 
 	</body>
 </html>
